# aoc2024

./: day_1_1.py  day_1_2.py  day_2_1.py  day_2_2.py  day_3.py  pyproject.toml  utils.py
data/: 15ter.txt  6bis.txt
inputs/: 2bis.txt
src/aoc2024/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day19.py  day2.py  day20.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  utils.py
