[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
]

[project.scripts]
day1 = "aoc2024.day1:main"
day2 = "aoc2024.day2:main"
day3 = "aoc2024.day3:main"
day4 = "aoc2024.day4:main"
day5 = "aoc2024.day5:main"
day6 = "aoc2024.day6:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath="."
venv=".venv"
typeCheckingMode="off"

[tool.ruff]
line-length = 150
