[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[project.scripts]
day1 = "aoc2024.day1:main"
day2 = "aoc2024.day2:main"
day3 = "aoc2024.day3:main"
day4 = "aoc2024.day4:main"
day5 = "aoc2024.day5:main"
day6 = "aoc2024.day6:main"
day7 = "aoc2024.day7:main"
day8 = "aoc2024.day8:main"
day9 = "aoc2024.day9:main"
day10 = "aoc2024.day10:main"
day11 = "aoc2024.day11:main"
day12 = "aoc2024.day12:main"
day13 = "aoc2024.day13:main"
day14 = "aoc2024.day14:main"
day15 = "aoc2024.day15:main"
day16 = "aoc2024.day16:main"
day17 = "aoc2024.day17:main"
day18 = "aoc2024.day18:main"
day19 = "aoc2024.day19:main"
day20 = "aoc2024.day20:main"
day21 = "aoc2024.day21:main"
day22 = "aoc2024.day22:main"
day23 = "aoc2024.day23:main"
day24 = "aoc2024.day24:main"
day25 = "aoc2024.day25:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["E741"]
